{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Sounds",
            "id": "2e354374-f287-476b-999e-7f531832063c",
            "actions": [
                {
                    "name": "kralenKetting",
                    "type": "Button",
                    "id": "93314822-adce-46fa-9d96-2561e63f94a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ijsSchep",
                    "type": "Button",
                    "id": "ce20d07f-b15e-46bc-9fe8-ba54d72ae625",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "klittenBand",
                    "type": "Button",
                    "id": "559ae414-5435-4d1d-a547-5e5a43760565",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "liniaal",
                    "type": "Button",
                    "id": "1606efee-f90e-4763-a04b-38df880988d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ocarina",
                    "type": "Button",
                    "id": "d8c37138-c95a-4447-b843-c4cb042eb411",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "sleutels",
                    "type": "Button",
                    "id": "62bd100c-78e2-4e39-a0ec-b029b055407b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e97877e7-659a-4822-81b4-80709958488e",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "kralenKetting",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73c74ae3-fa3f-467a-a03a-d9344857bda0",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ijsSchep",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1b695ad-106b-44c1-8fc2-da801a0678a2",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "klittenBand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6695947-b80a-44c2-9798-4c726b2ed105",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "liniaal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0201bf7-617b-4437-b758-e69a60c281be",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ocarina",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "edd0ae17-194a-4c41-ba20-377fca1a6bc9",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ocarina",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f3baa5e-252e-4f65-aaf2-4db48974e380",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sleutels",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f628b34-f538-432c-a413-830945dd1da1",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sleutels",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Alien",
            "id": "9473d1c7-d934-4b5c-b982-6f841480a816",
            "actions": [
                {
                    "name": "randomSound",
                    "type": "Button",
                    "id": "abf5888d-ed10-45a9-b28b-89ee191e57dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5478fab6-bb2d-4a64-97c3-7bd873b4f542",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "randomSound",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}